--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.edu.senac.algumascoisas">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature
+        android:name="android.hardware.camera.any"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,14 +18,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".conversao"></activity>
+        <activity android:name=".produto"
+            android:label="Produtos"></activity>
+        <activity
+            android:name=".ListaDeProdutos"
+            android:label="@string/title_activity_lista_de_produtos"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Sobre"
+            android:label="Sobre" />
+        <activity
+            android:name=".conversao"
+            android:label="Conversor de Bytes" />
         <activity
             android:name=".calculoimc"
-            android:label="@string/title_activity_calculoimc"
+            android:label="Calculo de IMC"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".principal"
-            android:label="@string/title_activity_principal"
+            android:label="Ferramentas"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MainActivity">
             <intent-filter>
